Alte APIs aktualisiert